--- a/hw-02/HW-02_PandasAndObjects-STUDENTlastcheck.ipynb
+++ b/hw-02/HW-02_PandasAndObjects-STUDENTlastcheck.ipynb
@@ -2099,6 +2099,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "76adbcdb",
+   "metadata": {},
+   "source": [
+    "trying something new"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8f271f51-e4d3-4481-916a-3965d9c96f33",
    "metadata": {
     "tags": []
