--- a/final/CMSE202_Final-STUDENT.ipynb
+++ b/final/CMSE202_Final-STUDENT.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-07T03:15:16.292936Z",
@@ -119,6 +119,15 @@
       "Using matplotlib backend: agg\n",
       "Populating the interactive namespace from numpy and matplotlib\n",
       "Sklearn version should be 1.1.3 and I have 1.1.3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.8/site-packages/IPython/core/magics/pylab.py:159: UserWarning: pylab import has clobbered these variables: ['cm']\n",
+      "`%matplotlib` prevents importing * from pylab and numpy\n",
+      "  warn(\"pylab import has clobbered these variables: %s\"  % clobbered +\n"
      ]
     }
    ],
@@ -141,6 +150,7 @@
     "from sklearn.metrics import classification_report\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score, ConfusionMatrixDisplay\n",
     "from sklearn.svm import SVC, LinearSVC\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "import statsmodels.api as sm \n",
     "\n",
@@ -897,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1772,7 +1782,7 @@
    "source": [
     "I just looked as the lowest standard error\n",
     "\n",
-    "Alternatively, auxillary regressions would be more accurate but theres a lot of varibales"
+    "Alternatively, auxillary regressions would be more accurate but theres a lot of varibles"
    ]
   },
   {
@@ -1819,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-07T03:32:35.543453Z",
@@ -1831,7 +1841,45 @@
    },
    "outputs": [],
    "source": [
-    "# Put your code here\n"
+    "features=winedf.drop([\"type\"],axis=1)\n",
+    "x = features.values\n",
+    "\n",
+    "y = winedf.loc[:,['type']].values\n",
+    "\n",
+    "x = StandardScaler().fit_transform(x)\n",
+    "\n",
+    "pca = PCA(n_components=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Components = pca.fit_transform(x)\n",
+    "principalDf = pd.DataFrame(data = Components, columns = ['component 1', 'component 2'])\n",
+    "pca_features = pd.concat([principalDf, winedf[['type']]], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.2536155  0.22076454]\n",
+      "47.438004270055025\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pca.explained_variance_ratio_)\n",
+    "total_variance = np.sum(pca.explained_variance_ratio_)*100\n",
+    "print(total_variance)"
    ]
   },
   {
@@ -1853,7 +1901,9 @@
     }
    },
    "source": [
-    "<font size=+3>&#9998;</font> Erase this and put your answer here."
+    "47% of variance was explained. \n",
+    "\n",
+    "The model will not preform will, I think it bottle necks with 12 features and two components"
    ]
   },
   {
@@ -1871,16 +1921,345 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-07T03:34:12.203423Z",
      "start_time": "2022-12-07T03:34:12.200976Z"
     }
    },
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'type'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3079\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3080\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3081\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'type'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-70-8162f79b059c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlabels\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpca_features\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'type'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mpca_features\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpca_features\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'type'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtrain_vectors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_vectors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_labels\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpca_features\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtest_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.25\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m314159\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3022\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3023\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3024\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3025\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3026\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3080\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3081\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3082\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3083\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3084\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtolerance\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'type'"
+     ]
+    }
+   ],
+   "source": [
+    "labels=pca_features['type']\n",
+    "pca_features=pca_features.drop(['type'],axis=1)\n",
+    "##train_vectors, test_vectors, train_labels, test_labels=train_test_split(pca_features,labels,test_size=0.25,random_state=314159)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Put your code here"
+    "train_vectors, test_vectors, train_labels, test_labels=train_test_split(pca_features,labels,test_size=0.25,random_state=314159)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>component 1</th>\n",
+       "      <th>component 2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3939</th>\n",
+       "      <td>-0.540739</td>\n",
+       "      <td>0.008987</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6456</th>\n",
+       "      <td>-3.110420</td>\n",
+       "      <td>-1.752097</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3036</th>\n",
+       "      <td>0.946323</td>\n",
+       "      <td>-2.021196</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3940</th>\n",
+       "      <td>1.139802</td>\n",
+       "      <td>-0.352150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5198</th>\n",
+       "      <td>-2.904600</td>\n",
+       "      <td>2.522744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3650</th>\n",
+       "      <td>0.467002</td>\n",
+       "      <td>-4.255467</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2385</th>\n",
+       "      <td>-0.446103</td>\n",
+       "      <td>0.004095</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1501</th>\n",
+       "      <td>2.256093</td>\n",
+       "      <td>2.703271</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2815</th>\n",
+       "      <td>1.012706</td>\n",
+       "      <td>-2.626306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3083</th>\n",
+       "      <td>0.390095</td>\n",
+       "      <td>0.690694</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4871 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      component 1  component 2\n",
+       "3939    -0.540739     0.008987\n",
+       "6456    -3.110420    -1.752097\n",
+       "3036     0.946323    -2.021196\n",
+       "3940     1.139802    -0.352150\n",
+       "5198    -2.904600     2.522744\n",
+       "...           ...          ...\n",
+       "3650     0.467002    -4.255467\n",
+       "2385    -0.446103     0.004095\n",
+       "1501     2.256093     2.703271\n",
+       "2815     1.012706    -2.626306\n",
+       "3083     0.390095     0.690694\n",
+       "\n",
+       "[4871 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_vectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>component 1</th>\n",
+       "      <th>component 2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2821</th>\n",
+       "      <td>0.384513</td>\n",
+       "      <td>-1.259792</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5480</th>\n",
+       "      <td>-1.300637</td>\n",
+       "      <td>1.595791</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>-0.591371</td>\n",
+       "      <td>-0.692595</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>542</th>\n",
+       "      <td>2.130094</td>\n",
+       "      <td>1.198270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3522</th>\n",
+       "      <td>0.448729</td>\n",
+       "      <td>-1.596225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1249</th>\n",
+       "      <td>-0.461214</td>\n",
+       "      <td>-0.192843</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2901</th>\n",
+       "      <td>1.964717</td>\n",
+       "      <td>-1.235910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2033</th>\n",
+       "      <td>-0.241393</td>\n",
+       "      <td>-1.654632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>317</th>\n",
+       "      <td>2.358937</td>\n",
+       "      <td>1.681070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5802</th>\n",
+       "      <td>-1.565369</td>\n",
+       "      <td>0.470831</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1624 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      component 1  component 2\n",
+       "2821     0.384513    -1.259792\n",
+       "5480    -1.300637     1.595791\n",
+       "2010    -0.591371    -0.692595\n",
+       "542      2.130094     1.198270\n",
+       "3522     0.448729    -1.596225\n",
+       "...           ...          ...\n",
+       "1249    -0.461214    -0.192843\n",
+       "2901     1.964717    -1.235910\n",
+       "2033    -0.241393    -1.654632\n",
+       "317      2.358937     1.681070\n",
+       "5802    -1.565369     0.470831\n",
+       "\n",
+       "[1624 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_vectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3939    0.0\n",
+       "6456    1.0\n",
+       "3036    0.0\n",
+       "3940    0.0\n",
+       "5198    1.0\n",
+       "       ... \n",
+       "3650    0.0\n",
+       "2385    0.0\n",
+       "1501    0.0\n",
+       "2815    0.0\n",
+       "3083    0.0\n",
+       "Name: type, Length: 4871, dtype: float64"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2821    0.0\n",
+       "5480    1.0\n",
+       "2010    0.0\n",
+       "542     0.0\n",
+       "3522    0.0\n",
+       "       ... \n",
+       "1249    0.0\n",
+       "2901    0.0\n",
+       "2033    0.0\n",
+       "317     0.0\n",
+       "5802    1.0\n",
+       "Name: type, Length: 1624, dtype: float64"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_labels"
    ]
   },
   {
